--- a/Resomar/WebContent/View/speciality/editModal.html
+++ b/Resomar/WebContent/View/speciality/editModal.html
@@ -9,8 +9,9 @@
 
             <div class="col-md-4">
                 <label ng-if="formSpecialityEdit.specialityEdit.$valid">Especialidade</label>
-                <input class="form-control input"  name="specialityEdit" placeholder="Especialidade" focus="true"
-                       ng-class="{'invalid':formSpecialityEdit.specialityEdit.$invalid && formSpecialityEdit.specialityEdit.$touched}" ng-model="specialityCtrl.specialityEdit" required>
+                <input class="form-control input" name="specialityEdit" placeholder="Especialidade" focus="true"
+                       ng-class="{'invalid':formSpecialityEdit.specialityEdit.$invalid && formSpecialityEdit.specialityEdit.$touched}"
+                       ng-model="specialityCtrl.editSpeciality.specialityEdit" required>
             </div>
         </div>
     </form>
