--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -52,9 +52,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#/instituicao">
+                                    <a href="#/ong">
                                         <i class="fas fa-building"></i>
-                                        <span class="item-menu">Instituições</span>
+                                        <span class="item-menu">ONG</span>
                                     </a>
                                 </li>
                                 <li>
