--- a/Resomar/WebContent/View/specialist/specialist.html
+++ b/Resomar/WebContent/View/specialist/specialist.html
@@ -8,37 +8,42 @@
         </h4>
         <form class="specialist-form" name="specialistForm">
             <div class="specialist-add row" ng-show="!changeIcon">
-                <div class="col-md-6">
+                <div class="form-group col-md-6">
                     <input class="form-control input nome" type="text"
-                           placeholder="Nome" name="name"
+                          name="name"
                            ng-class="{'invalid':specialistForm.name.$invalid && specialistForm.name.$touched}"
                            ng-model="specialistCtrl.newSpecialist.name" required>
+                    <label class="form-control-placeholder">Nome</label>
                 </div>
-                <label class="col-md-6">
-                    <input class="form-control input" type="text" placeholder="Sobrenome"
+                <div class="form-group col-md-6">
+                    <input class="form-control input" type="text"
                            id="sobrenome" name="lastName"
                            ng-class="{'invalid':specialistForm.lastName.$invalid && specialistForm.lastName.$touched}"
                            ng-model="specialistCtrl.newSpecialist.lastName" required>
-                </label>
-                <label class="col-md-6">
-                    <input class="form-control input" type="text" placeholder="Email"
+                    <label class="form-control-placeholder">Sobrenome</label>
+                </div>
+                <div class="form-group col-md-6">
+                    <input class="form-control input" type="text"
                            id="email" name="email"
                            ng-class="{'invalid':specialistForm.email.$invalid && specialistForm.email.$touched}"
                            ng-model="specialistCtrl.newSpecialist.email" required>
-                </label>
-                <label class="col-md-3">
-                    <input class="form-control input" type="text" placeholder="Telefone Fixo"
+                    <label class="form-control-placeholder">Email</label>
+                </div>
+                <div class="form-group col-md-3">
+                    <input class="form-control input" type="text"
                            id="telefone" name="landLine"
                            ng-class="{'invalid':specialistForm.landLine.$invalid && specialistForm.landLine.$touched}"
                            ng-model="specialistCtrl.newSpecialist.landLine" required>
-                </label>
-                <label class="col-md-3">
-                    <input class="form-control input" type="text" placeholder="Celular"
+                    <label class="form-control-placeholder">Telefone Fixo</label>
+                </div>
+                <div class="form-group col-md-3">
+                    <input class="form-control input" type="text"
                            id="Celular" name="celPhone"
                            ng-class="{'invalid':specialistForm.celPhone.$invalid && specialistForm.celPhone.$touched}"
                            ng-model="specialistCtrl.newSpecialist.celPhone" required>
-                </label>
-                <label class="col-md-6">
+                    <label class="form-control-placeholder">Celular</label>
+                </div>
+                <div class="form-group col-md-6">
                     <select class="form-control" name="advice"
                             ng-class="{'invalid':specialistForm.advice.$invalid && specialistForm.advice.$touched}"
                             ng-model="specialistCtrl.newSpecialist.advice" required>
@@ -46,14 +51,15 @@
                         <option value="CRM">CRM</option>
                         <option value="CRO">CRO</option>
                     </select>
-                </label>
-                <label class="col-md-6">
-                    <input class="form-control input" type="text" placeholder="Nº do Conselho"
+                </div>
+                <div class="form-group col-md-6">
+                    <input class="form-control input" type="text"
                            id="numeroConselho" name="adviceNumber"
                            ng-class="{'invalid':specialistForm.adviceNumber.$invalid && specialistForm.adviceNumber.$touched}"
-                           ng-model="specialistCtrl.newSpecialist.adviceNumber" required>
-                </label>
-                <label class="col-md-6">
+                               ng-model="specialistCtrl.newSpecialist.adviceNumber" required>
+                    <label class="form-control-placeholder">Nº do conselho</label>
+                </div>
+                <div class="form-group col-md-6">
                     <select class="form-control" name="speciality"
                             ng-class="{'invalid':specialistForm.speciality.$invalid && specialistForm.speciality.$touched}"
                             ng-model="specialistCtrl.newSpecialist.speciality" required>
@@ -68,15 +74,15 @@
                         </option>
                         <option value="CIRURGIA DO TRAUMA">CIRURGIA DO TRAUMA</option>
                     </select>
-                </label>
-                <label class="col-md-6">
+                </div>
+                <div class="form-group col-md-6">
                     <select class="form-control" name="clinic"
                             ng-model="specialistCtrl.newSpecialist.clinic" required>
                         <option value="">Clínica</option>
                         <option value="1">Clíninca Curumim, Rua Doutor João Collin, 11, Joinville/SC</option>
                         <option value="2 ">Clínica Volte a Sorrir, Rua Jacob, 88, Joinville/SC</option>
                     </select>
-                </label>
+                </div>
                 <div class="buttons col-md-12">
                     <input type="button" class="btn btn-save" value="Cadastrar"
                            ng-click="specialistCtrl.validateSpecialistForm();">
