--- a/Resomar/WebContent/View/speciality/speciality.html
+++ b/Resomar/WebContent/View/speciality/speciality.html
@@ -39,8 +39,7 @@
         <th scope="row">1</th>
         <td>Dentista</td>
         <td class="icons">
-            <a class="btn btn-sm button-edit " ng-click="specialityCtrl.openModal('lg');"><i
-                    class="fas fa-pencil-alt"></i></a>
+            <a class="btn btn-sm button-edit " ng-click="specialityCtrl.openModal('lg');"><i class="fas fa-pencil-alt"></i></a>
             <a class="btn btn-sm button-trash"><i class="fas fa-trash-alt"></i></a>
         </td>
     </tr>
