cadastro de ong

--- a/Resomar/WebContent/index.css
+++ b/Resomar/WebContent/index.css
@@ -3,13 +3,13 @@
 }
 .form-group {
     position: relative !important;
-    margin-bottom: 1.5rem !important;
+    margin-bottom: 0.5rem !important;
 }
 
 .form-control-placeholder {
     position: absolute !important;
-    top: 0 !important;
-    padding: 7px 0 0 13px !important;
+    top: 10px !important;
+    padding: 3px 0 0 13px !important;
     transition: all 200ms !important;
     opacity: 0.5 !important;
 }
@@ -19,4 +19,32 @@
     font-size: 100% !important;
     transform: translate3d(0, -100%, 0) !important;
     opacity: 1 !important;
+}
+
+.form-control {
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid rgb(181, 181, 181);
+    outline: none !important;
+    box-shadow: none !important;
+    margin-top: 15px;
+}
+
+.form-control:focus {
+    background: transparent;
+}
+
+.textarea:focus + .form-control-placeholder-textarea,
+.textarea:valid + .form-control-placeholder-textarea {
+    font-size: 100% !important;
+    transform: translate3d(0, -100%, 0) !important;
+    opacity: 1 !important;
+}
+
+.form-control-placeholder-textarea {
+    position: absolute !important;
+    top: 30px !important;
+    padding: 3px 0 0 13px !important;
+    transition: all 200ms !important;
+    opacity: 0.5 !important;
 }
