--- a/Resomar/WebContent/View/ong/ong.html
+++ b/Resomar/WebContent/View/ong/ong.html
@@ -9,44 +9,36 @@
         <form class="institution-form" ng-show="changeIcon" name="formOng">
             <div class="row">
                 <div class="form-group col-sm-6 col-lg-6 col-xl-6 col-md-6">
-                    <input type="text" id="ongName" class="form-control" ng-model="ongCtrl.ongName"
+                    <input type="text" id="ongName" class="form-control" ng-model="ongCtrl.newOng.ongName"
                            ng-class="{'invalid': formOng.ongName.$invalid && formOng.ongName.$touched}"
                            name="ongName" required>
                     <label class="form-control-placeholder" for="ongName">ONG</label>
                 </div>
                 <div class="form-group col-sm-6 col-lg-6 col-xl-6 col-md-6">
-                    <input type="text" id="cnpjOng" class="form-control" ng-model="ongCtrl.cnpjOng"
+                    <input type="text" id="cnpjOng" class="form-control" ng-model="ongCtrl.newOng.cnpjOng"
                            ng-class="{'invalid': formOng.cnpjOng.$invalid && formOng.cnpjOng.$touched}"
                            name="cnpjOng" required>
                     <label class="form-control-placeholder" for="cnpjOng">CNPJ</label>
                 </div>
-                <div class="form-group col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <textarea type="text" id="aboutOng" class="form-control" ng-model="ongCtrl.aboutOng"
-                              name="aboutOng"></textarea>
-                    <label class="form-control-placeholder" for="aboutOng">Descrição brévia das instituição</label>
-                </div>
-
-                <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">Localização:</label>
-                <label class="radio-inline col-sm-2 col-lg-2 col-xl-2 col-md-2"><input type="radio" name="optradio"
-                                                                                       checked> Indefinido
-                </label>
-                <label class="radio-inline col-sm-2 col-lg-2 col-xl-2 col-md-2"><input type="radio" name="optradio"
-                                                                                       checked> Especificar
-                </label>
                 <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
                     <select id="estadoONG" name="estadoONG" class="form-control">
                         <option>Estado</option>
-                        <option>2</option>
-                        <option>3</option>
+                        <option>SC</option>
+                        <option>PR</option>
                     </select>
                 </label>
                 <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <select id="cidadeONG" name="cidadeONG" class="form-control">
+                    <select id="cidadeONG" name="cidadeONG" class="form-control" >
                         <option>Cidade</option>
-                        <option>2</option>
-                        <option>3</option>
+                        <option>Joinville</option>
+                        <option>Blumenau</option>
                     </select>
                 </label>
+                <div class="form-group col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                    <textarea type="text" id="aboutOng" class="form-control textarea" ng-model="ongCtrl.aboutOng"
+                              name="aboutOng" required="false"></textarea>
+                    <label class="form-control-placeholder-textarea" for="aboutOng">Descrição brévia das instituição</label>
+                </div>
                 <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">Categorias:</label>
                 <label class="checkbox-inline col-sm-4 col-lg-4 col-xl-4 col-md-4"><input type="checkbox" value="">
                     Cidadania e Defesa de Direitos</label>
@@ -76,7 +68,7 @@
                     Mobilização Interna</label>
                 <div class="buttons col-md-12" style="text-align: right">
                     <button type="button" class="btn btn-cancel">Cancelar</button>
-                    <button type="button" class="btn btn-save">Cadastrar</button>
+                    <button type="button" class="btn btn-save" ng-click="ongCtrl.validateOngForm();">Cadastrar</button>
                 </div>
             </div>
         </form>
@@ -99,7 +91,7 @@
         <td>99.999.999/9999-99</td>
         <td>Joinville/SC</td>
         <td class="icons">
-            <a class="btn btn-sm button-edit " ng-click="specialityCtrl.openModal('lg');"><i
+            <a class="btn btn-sm button-edit " ng-click="ongCtrl.openModal('lg');"><i
                     class="fas fa-pencil-alt"></i></a>
             <a class="btn btn-sm button-trash"><i class="fas fa-trash-alt"></i></a>
         </td>
