ajuste textarea cadastro de ong

--- a/Resomar/WebContent/View/needs/needs.html
+++ b/Resomar/WebContent/View/needs/needs.html
@@ -27,7 +27,7 @@
                 <div class="form-group col-sm-6 col-lg-6 col-xl-6 col-md-6">
                     <textarea type="text" id="observation" name="observation" class="form-control" ng-model="needsCtrl.newNeeds.observation"
                               ng-class="{'invalid': formNeeds.observation.$invalid && formNeeds.observation.$touched}"
-                              name="observation"></textarea>
+                              name="observation" required="false"></textarea>
                     <label class="form-control-placeholder" for="observation">Observações</label>
                 </div>
                 <div class="buttons col-md-12" style="text-align: right">
