--- a/Resomar/WebContent/View/ong/ong.html
+++ b/Resomar/WebContent/View/ong/ong.html
@@ -35,9 +35,9 @@
                     </select>
                 </label>
                 <div class="form-group col-sm-12 col-lg-12 col-xl-12 col-md-12">
-                    <textarea type="text" id="aboutOng" class="form-control textarea" ng-model="ongCtrl.aboutOng"
-                              name="aboutOng" required="false"></textarea>
-                    <label class="form-control-placeholder-textarea" for="aboutOng">Descrição brévia das instituição</label>
+                     <textarea type="text" id="description" name="description" class="form-control" ng-model="ongCtrl.newOng.description"
+                               name="description" required="false"></textarea>
+                    <label class="form-control-placeholder" for="description">Descrição brévia das instituição</label>
                 </div>
                 <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">Categorias:</label>
                 <label class="checkbox-inline col-sm-4 col-lg-4 col-xl-4 col-md-4"><input type="checkbox" value="">
